[package]
name = "anvil-region"
version = "0.4.0"
authors = ["vagola <vladislavs.golubs@yandex.ru>"]
edition = "2018"
description = "Region file format storage for chunks."
license = "MIT"
homepage = "https://github.com/eihwaz/anvil-region"
repository = "https://github.com/eihwaz/anvil-region"
keywords = ["minecraft", "region", "anvil", "io"]
readme = "README.md"

[dependencies]
byteorder = "1.3"
named-binary-tag = "0.3"
bitvec = "0.17"
log = "0.4.11"
